[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "asynckivy-ext-popup"
version = "0.0.1.dev0"
description = "Helps you create custom popup widgets."
authors = [
    {name = "Nattōsai Mitō",email = "flow4re2c@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "asynckivy (>=0.9,<0.10)",
    "kivy (>=2,<4)"
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]

[project.urls]
Repository = 'https://github.com/asyncgui/asynckivy-ext-popup'
Homepage = 'https://github.com/asyncgui/asynckivy-ext-popup'

[tool.uv.build-backend]
module-name = "asynckivy_ext.popup"

[dependency-groups]
dev = [
    "kivy==2.3.1",
]
